test/files/neg/macro-bundle-wrongcontext-a.check
macro-bundle-wrongcontext-a.scala:12: error: not found: value Bundle
  def foo: Any = macro Bundle.impl
                       ^
one error found
